--- a/Css/winkelmandje.css
+++ b/Css/winkelmandje.css
@@ -156,24 +156,11 @@ body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-bo
 }
 
 body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .winkelmandje-details-box-info-details {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   width: 100%;
-}
-
-@media only screen and (max-width: 768px) {
-  body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .winkelmandje-details-box-info-details {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
 }
 
 body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .winkelmandje-details-box-info-details .winkelmandje-details-box-info-details-product {
   width: 50%;
-  height: 300px;
-  background-color: #011627;
 }
 
 @media only screen and (max-width: 768px) {
@@ -186,6 +173,9 @@ body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-bo
 
 body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .winkelmandje-details-box-info-details .winkelmandje-details-box-info-details-product p {
   font-family: proxima-soft, sans-serif;
+  background-color: #011627;
+  height: 300px;
+  min-width: 100px;
 }
 
 body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .winkelmandje-details-box-info-Aantal-prijs-totaal {
@@ -195,7 +185,11 @@ body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-bo
 }
 
 body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .winkelmandje-details-box-info-Aantal-prijs-totaal div input {
-  width: 50px;
+  width: 25px;
+}
+
+body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .winkelmandje-details-box-info-Aantal-prijs-totaal .media-title {
+  font-weight: bold;
 }
 
 body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .winkelmandje-details-box-info-Aantal-prijs-totaal p {
