--- a/Css/winkelmandje.scss
+++ b/Css/winkelmandje.scss
@@ -37,20 +37,17 @@ body{
                             font-family: $bodyFont;
                             border-bottom: 1px solid $primary1Color;
                             .winkelmandje-details-box-info-details{
-                                display: flex;
-                                width: 100%; 
-                                @media only screen and (max-width: 768px){
-                                    display: flex;
-                                 }
+                                width: 100%;
                                 .winkelmandje-details-box-info-details-product{
                                     width: 50%;
-                                    height: 300px;
-                                    background-color: $primary1Color; 
                                     @media only screen and (max-width: 768px){
                                         order: 1;
                                      }
                                     p{
                                         font-family: $bodyFont;
+                                        background-color: $primary1Color;   
+                                        height: 300px;
+                                        min-width: 100px;
                                     }
                                 }
                             }
@@ -58,8 +55,11 @@ body{
                                 display: flex;
                                 div{
                                     input{
-                                        width: 50px;
+                                        width: 25px;
                                     }
+                                }
+                                .media-title{
+                                    font-weight: bold;
                                 }
                                 p{
                                     font-family: $bodyFont;
