genral styles add

--- a/Css/contact.scss
+++ b/Css/contact.scss
@@ -1,6 +1,9 @@
 @import "./generalStyles";
 @import "./components";
 
+*{
+    @extend %opmaak;
+}
 body{
     .fullpage{
         @extend %navigation;
