--- a/Css/_components.scss
+++ b/Css/_components.scss
@@ -1,5 +1,18 @@
 @import "./generalStyles";
 
+// general opmaak
+%opmaak{
+    p{
+        padding: 0;
+        margin: 0;
+    }
+    h1, h2, h3, h4, h5{
+        padding: 0;
+        margin: 0;
+    }
+    box-sizing: border-box;
+}
+
 // Navigation
 %navigation{
     nav{
