--- a/Css/winkelmandje.css
+++ b/Css/winkelmandje.css
@@ -8,6 +8,11 @@
   margin: 0;
 }
 
+* a {
+  padding: 0;
+  margin: 0;
+}
+
 * h1, * h2, * h3, * h4, * h5 {
   padding: 0;
   margin: 0;
@@ -21,10 +26,18 @@ body .fullpage nav {
   z-index: 1;
 }
 
+@media only screen and (max-width: 768px) {
+  body .fullpage nav {
+    height: auto;
+  }
+}
+
 body .fullpage nav .brand {
   font-family: cubano, sans-serif;
   color: #011627;
   font-size: 1.25rem;
+  padding: 0;
+  margin: 0;
 }
 
 body .fullpage nav div {
@@ -148,6 +161,10 @@ body .fullpage main {
   }
 }
 
+body .fullpage main .winkelmandje {
+  height: 100%;
+}
+
 body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-header h1 {
   font-family: cubano, sans-serif;
 }
@@ -217,19 +234,28 @@ body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-bo
   text-decoration: underline;
 }
 
-body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-overzicht {
+body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-box {
+  border-radius: 5px;
+  background-color: #c4bfbf;
+}
+
+body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-box .winkelmandje-betalen-overzicht {
   border-bottom: 1px solid #011627;
 }
 
-body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-promotie {
+body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-box .winkelmandje-betalen-promotie {
   border-bottom: 1px solid #011627;
 }
 
-body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-aantal {
+body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-box .winkelmandje-betalen-aantal {
   border-bottom: 1px solid #011627;
 }
 
-body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-foto {
+body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-box .winkelmandje-betalen-foto {
   border-bottom: 1px solid #011627;
+}
+
+body .fullpage main .winkelmandje .winkelmandje-betalen .winkelmandje-betalen-box .winkelmandje-betalen-foto .foto {
+  height: 20vh;
 }
 /*# sourceMappingURL=winkelmandje.css.map */
