--- a/Css/index.css
+++ b/Css/index.css
@@ -6,6 +6,8 @@
 * p {
   padding: 0;
   margin: 0;
+  font-family: proxima-soft, sans-serif;
+  font-size: 1rem;
 }
 
 * a {
@@ -16,6 +18,15 @@
 * h1, * h2, * h3, * h4, * h5 {
   padding: 0;
   margin: 0;
+}
+
+* h1 {
+  font-family: cubano, sans-serif;
+  font-size: 3.125rem;
+}
+
+* button {
+  font-family: proxima-soft, sans-serif;
 }
 
 body .fullpage nav {
@@ -162,10 +173,6 @@ body .fullpage main .row-koop-nu .col-koop-nu-foto img {
   max-height: 80%;
 }
 
-body .fullpage main .row-koop-nu .col-koop-nu-info div h1 {
-  font-family: cubano, sans-serif;
-}
-
 body .fullpage main .row-specs {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
@@ -174,10 +181,6 @@ body .fullpage main .row-specs {
 
 body .fullpage main .row-specs .row-specs-title {
   height: 15%;
-}
-
-body .fullpage main .row-specs .row-specs-title h1 {
-  font-family: cubano, sans-serif;
 }
 
 body .fullpage main .row-specs .row-specs-content {
@@ -193,9 +196,20 @@ body .fullpage main .row-myping {
   height: 92vh;
 }
 
-body .fullpage main .row-myping .row-myping-mockup img {
-  max-height: 100%;
-  max-width: 100%;
+body .fullpage main .row-myping .row-myping-mockup {
+  position: relative;
+}
+
+body .fullpage main .row-myping .row-myping-mockup .mockup1 {
+  height: 75%;
+}
+
+body .fullpage main .row-myping .row-myping-mockup .mockup2 {
+  z-index: -1;
+  position: absolute;
+  height: 71%;
+  left: 150px;
+  bottom: 125px;
 }
 
 body .fullpage main .row-myping .row-myping-info {
@@ -222,26 +236,13 @@ body .fullpage main .row-myping .row-myping-info .row-myping-info-box {
           justify-content: space-between;
 }
 
-body .fullpage main .row-myping .row-myping-info .row-myping-info-box div h1 {
-  font-family: cubano, sans-serif;
-}
-
 body .fullpage main .row-overping {
   height: 92vh;
-}
-
-body .fullpage main .row-overping .row-overping-titel h1 {
-  font-family: cubano, sans-serif;
 }
 
 body .fullpage main .row-overping .row-overping-tekstblokken .team-focus-missie h4 {
   font-family: proxima-soft, sans-serif;
   font-weight: 600;
   margin-bottom: 3rem;
-}
-
-body .fullpage main .row-overping .row-overping-tekstblokken .team-focus-missie p {
-  font-family: proxima-soft, sans-serif;
-  font-size: 1rem;
 }
 /*# sourceMappingURL=index.css.map */
