--- a/Css/login.css
+++ b/Css/login.css
@@ -1,3 +1,34 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+* p {
+  padding: 0;
+  margin: 0;
+  font-family: proxima-soft, sans-serif;
+  font-size: 1rem;
+}
+
+* a {
+  padding: 0;
+  margin: 0;
+}
+
+* h1, * h2, * h3, * h4, * h5 {
+  padding: 0;
+  margin: 0;
+}
+
+* h1 {
+  font-family: cubano, sans-serif;
+  font-size: 3.125rem;
+}
+
+* button {
+  font-family: proxima-soft, sans-serif;
+}
+
 body .fullpage nav {
   height: 8vh;
   position: fixed;
@@ -139,10 +170,6 @@ body .fullpage main {
   body .fullpage main {
     height: auto;
   }
-}
-
-body .fullpage main .row .contact-form .contact-form-header h1 {
-  font-family: cubano, sans-serif;
 }
 
 body .fullpage main .row .contact-form .contact-form-input {
