--- a/Css/overOns.css
+++ b/Css/overOns.css
@@ -1,3 +1,34 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+* p {
+  padding: 0;
+  margin: 0;
+  font-family: proxima-soft, sans-serif;
+  font-size: 1rem;
+}
+
+* a {
+  padding: 0;
+  margin: 0;
+}
+
+* h1, * h2, * h3, * h4, * h5 {
+  padding: 0;
+  margin: 0;
+}
+
+* h1 {
+  font-family: cubano, sans-serif;
+  font-size: 3.125rem;
+}
+
+* button {
+  font-family: proxima-soft, sans-serif;
+}
+
 body .fullpage nav {
   height: 8vh;
   position: fixed;
@@ -147,7 +178,6 @@ body .fullpage main .row .column-header {
 }
 
 body .fullpage main .row .column-header .header-text {
-  font-family: cubano, sans-serif;
   font-size: 4.6875rem;
 }
 
@@ -155,19 +185,10 @@ body .fullpage main .row .column-header h4 {
   font-family: proxima-soft, sans-serif;
 }
 
-body .fullpage main .row .column-header p {
-  font-family: proxima-soft, sans-serif;
-}
-
 body .fullpage main .row .column-content {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   overflow: hidden;
-}
-
-body .fullpage main .row .column-content h1 {
-  font-family: cubano, sans-serif;
-  font-size: 3.125rem;
 }
 
 body .fullpage main .row .column-content p {
