--- a/Css/_components.scss
+++ b/Css/_components.scss
@@ -22,6 +22,10 @@
     }
     button{
         font-family: $bodyFont;
+        background-color:red;
+        font-size: ;
+        
+    
         // colors nog
         // misschien 2 soorten buttons
     }
