--- a/Css/index.scss
+++ b/Css/index.scss
@@ -21,7 +21,9 @@ body{
                         h1{
                         }
                         p{}
-                        button{}
+                        button{
+                            background-color: red;
+                        }
                     }
                 }
             }
