--- a/Css/index.scss
+++ b/Css/index.scss
@@ -5,6 +5,8 @@
     @extend %opmaak;
 }
 body{
+    background-image: linear-gradient(#74E3CF, #CCF2EB, #CCF2EB);
+    overflow-x: hidden;
     .fullpage{
         @extend %navigation;
         main{
@@ -24,6 +26,11 @@ body{
                         button{
                         }
                     }
+                    .sun{
+                        z-index: -1;
+                        top: -200px;
+                        left: 500px;
+                    }
                 }
             }
             .row-specs{
@@ -41,8 +48,16 @@ body{
                       img{
                         max-width: 80%;
                         height: auto;
-                        
                       }
+                    }
+                    .cloud1{
+                        z-index: -1;
+                        top: -50px;
+                        left: -350px;
+                    }
+                    .cloud2{
+                        z-index: -1;
+                        top: 500px;
                     }
                     button{}
                 }
@@ -82,6 +97,11 @@ body{
                             button{}
                         }
                     }
+                    .cloud3{
+                        z-index: -2;
+                        top: 380px;
+                        right: -225px;
+                    }
                 }
             }
             .row-overping{
@@ -103,6 +123,11 @@ body{
                 }
                 .row-overping-info{
                     button{}
+                }
+                .cloud4{
+                    z-index: -1;
+                    top: -100px;
+                    left: -200px;
                 }
             }
         }
